[tool.poetry]
authors = ["Brandon <brandon@skerritt.blog>"]
description = "Automated Decryption Tool"
documentation = "https://github.com/Ciphey/Ciphey/wiki"
exclude = ["tests/hansard.txt"]
license = "MIT"
name = "ciphey"
readme = "README.md"
version = "5.14.1"

[tool.poetry.dependencies]
cipheydists = "^0.3.35"
flake8 = ">=3.8.4,<5.0.0"
pylint = "^2.6.0"
python = "^3.7"
pyyaml = ">=5.3.1,<7.0.0"
rich = ">=4,<11"
# cipheycore = "^0.3.2"
appdirs = "^1.4.4"
base58 = "^2.0.1"
base91 = "^1.0.1"
cipheycore = { path = "/CipheyCore.whl" }
click = ">=7.1.2,<9.0.0"
mock = "^4.0.3"
pybase62 = ">=0.4.3,<0.6.0"
pywhat = "3.0.0"
typing_inspect = { version = ">=0.6,<0.8", python = "~3.7" }
xortool-ciphey = "^0.1.16"

[tool.poetry.dev-dependencies]
black = "^21.4b2"
codecov = "^2.1.11"
neovim = "^0.3.1"
nltk = "^3.5"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
sphinx = "^5.0.1"
sphinx-autodoc-typehints = "^1.11.1"

[tool.poetry.scripts]
ciphey = 'ciphey.ciphey:main'
[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
